# iconipy

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
demo_programs/: README.md
demo_programs/CustomIconFactory/: README.md  custom_icon_set.py
demo_programs/DearPyGUI/: DearPyGui_demo.py  README.md
demo_programs/FreeSimpleGUI_PySimpleGUI/: FreeSimpleGUI_PySimpleGUI_themed_icon_buttons.py  README.md  freesimplegui_pysimplegui_demo.py  freesimplegui_pysimplegui_mouseover_demo.py  freesimplegui_pysimplegui_mouseover_demo2.py  hello_world.py  wifi_toggle.py
demo_programs/NiceGUI/: NiceGUI_demo.py  NiceGUI_grid.py  README.md
demo_programs/PyQt6/: PyQt6_all_icons_demo.py  PyQt6_demo.py  README.md
demo_programs/PySide6/: PySide6_all_icons_demo.py  PySide6_demo.py  README.md
demo_programs/appJar/: README.md  iconipy_ImageButton.py
demo_programs/customtkinter/: README.md  customtkinter_custom_icons_demo.py  customtkinter_layout_template.py  customtkinter_layout_with_expanding_navigation.py
demo_programs/gradio/: README.md  gradio_iconipy.py
demo_programs/kivy/: README.md  kivy_button_demo.py
demo_programs/tkinter/: README.md  tk_demo.py  tk_demo_2.py
demo_programs/ttk/: README.md  ttk_demo.py
demo_programs/ttkbootstrap/: README.md  ttkbootstrap_horizontal_template.py  ttkbootstrap_icon_buttons_grid_demo.py  ttkbootstrap_icon_demo.py  ttkbootstrap_vertical_template.py
docs/: Einführung in das iconipy Package - Erzeuige Icons direkt in Python Programmen.odp  Introduction to the iconipy Package - Create Icons from Pyton Code.odp  iconipy.html  index.html
(+11 files in other folders)
